--- a/README
+++ b/README
@@ -8,7 +8,7 @@ for reading from and writing to compressed files in these formats.
 
 REQUIREMENTS:
 
-- Objective Caml 3.02 or up.
+- Objective Caml 3.02 or up.  3.04 or up is recommended.
 
 - The Zlib C library, version 1.1.3 or up.  If it is not installed on
   your system (look for libz.a or libz.so), get it from
@@ -17,6 +17,9 @@ REQUIREMENTS:
   library.
 
 INSTALLATION:
+
+- If you are using a version of OCaml older than 3.04, replace
+  Makefile by Makefile-pre-3.04.
 
 - Edit the three variables at the beginning of the Makefile to reflect
   the location where Zlib is installed on your system.  The defaults
