--- a/README
+++ b/README
@@ -8,7 +8,7 @@ for reading from and writing to compressed files in these formats.
 
 REQUIREMENTS:
 
-- Objective Caml 3.02 or up.  3.04 or up is recommended.
+- Objective Caml 3.06 or up.
 
 - The Zlib C library, version 1.1.3 or up.  If it is not installed on
   your system (look for libz.a or libz.so), get it from
@@ -17,9 +17,6 @@ REQUIREMENTS:
   library.
 
 INSTALLATION:
-
-- If you are using a version of OCaml older than 3.04, replace
-  Makefile by Makefile-pre-3.04.
 
 - Edit the three variables at the beginning of the Makefile to reflect
   the location where Zlib is installed on your system.  The defaults
@@ -47,9 +44,11 @@ The directory test/ contains examples of using this library.
 
 LICENSING:
 
-This library is copyright 2001 Institut National de Recherche
+This library is copyright 2001, 2002, 2006 Institut National de Recherche
 en Informatique et en Automatique, and distributed under the terms
-of the GNU Library General Public License (LGPL).
+of the GNU Library General Public License (LGPL) with a special exception
+concerning static linking.  See the file LICENSE for the exact 
+licensing terms.
 
 BUG REPORTS AND USER FEEDBACK:
 
