Documentation in ocamldoc format
git-svn-id: svn://scm.ocamlcore.org/svn/camlzip/trunk@18 ffad48d0-767a-0410-b1da-8249f8538e9f

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Release 1.03:
+- Fixed bug in Zlib.uncompress that could cause it to loop infinitely.
+- Documentation comments in .mli files converted to ocamldoc format.
+
 Release 1.02:
 - 64-bit incompatibility fixed.
 - Better support for large ZIP files (> 2 Gb).
