Add support for findlib, with install-findlib target in Makefile
git-svn-id: svn://scm.ocamlcore.org/svn/camlzip/trunk@23 ffad48d0-767a-0410-b1da-8249f8538e9f

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+- Added support for findlib (Contributed by E. Friendly)
+
 Release 1.04:
 - Added function Zip.add_entry_generator.  (Contributed by A. Frisch.)
 - The "level" optional argument was sometimes not honored; fixed.
